# patch-pilot

./: .gitignore  LICENSE  README.md  pyproject.toml
patch_pilot/: __init__.py  analyzer.py  changelog.py  cli.py  exporter.py  splitter.py  stack.py
