[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patch-pilot"
version = "0.1.0"
description = "Turn messy git branches into clean, reviewable patch stacks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "patch-pilot contributors"}]
keywords = ["git", "patch", "code-review", "workflow", "changelog"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "click>=8.0",
]

[project.scripts]
patch-pilot = "patch_pilot.cli:cli"

[project.urls]
Homepage = "https://github.com/patch-pilot/patch-pilot"
Issues = "https://github.com/patch-pilot/patch-pilot/issues"

[tool.setuptools.packages.find]
include = ["patch_pilot*"]
